--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -160,7 +160,10 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYDevice.h" />
     <ClInclude Include="HYEngine.h" />
     <ClInclude Include="HYEntity.h" />
+    <ClInclude Include="HYKeyMgr.h" />
     <ClInclude Include="HYLevel.h" />
+    <ClInclude Include="HYPathMgr.h" />
+    <ClInclude Include="HYTimeMgr.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SimpleMath.h" />
     <ClInclude Include="singleton.h" />
@@ -172,7 +175,10 @@ call EngineCopy.bat</Command>
     <ClCompile Include="HYDevice.cpp" />
     <ClCompile Include="HYEngine.cpp" />
     <ClCompile Include="HYEntity.cpp" />
+    <ClCompile Include="HYKeyMgr.cpp" />
     <ClCompile Include="HYLevel.cpp" />
+    <ClCompile Include="HYPathMgr.cpp" />
+    <ClCompile Include="HYTimeMgr.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
