Asset, Shader, Mesh 코드 정리 및 GameObject, Component 구성

--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -38,6 +38,42 @@
     <Filter Include="04. Manager\TimeMgr">
       <UniqueIdentifier>{9446e728-3b48-4a38-bcd9-104f4f128dc7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="06. Asset">
+      <UniqueIdentifier>{dc5ac5f6-fe5a-42e2-9d2a-1157cc5eefa3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="07. GameObject">
+      <UniqueIdentifier>{9810d4fd-1705-4d53-a705-54feedd499bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component">
+      <UniqueIdentifier>{f14234e6-914a-44d4-84d7-ba644e24c4bc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component\01. Transform">
+      <UniqueIdentifier>{a831fedb-0c0d-445c-ad73-59084eb6df68}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component\02. Collider2D">
+      <UniqueIdentifier>{cf8263b3-a69a-46c5-b998-3a8d7497522f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component\04. Animator2D">
+      <UniqueIdentifier>{f47178fd-01f8-4b05-b796-1a05a15daeba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component\06. Light2D">
+      <UniqueIdentifier>{7a2dff7b-a081-4072-8ad9-76393851c67b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="08. Component\08. Camera">
+      <UniqueIdentifier>{0e6f1a77-d8d7-43d8-a85a-48bfec3a17a0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="06. Asset\Mesh">
+      <UniqueIdentifier>{0f21e1f2-4c14-4b20-8e53-73bb89e26c1d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="06. Asset\Shader">
+      <UniqueIdentifier>{c11c5139-1493-41f2-a41c-5fb63a7dd7fb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="06. Asset\Shader\ComputeShader">
+      <UniqueIdentifier>{950dc33d-24c1-4bb2-910a-9cdf1eb4a78a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="06. Asset\Shader\GraphicsShader">
+      <UniqueIdentifier>{5249228d-036d-4385-a083-6c5253fe5eca}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -85,6 +121,24 @@
     <ClInclude Include="HYTimeMgr.h">
       <Filter>04. Manager\TimeMgr</Filter>
     </ClInclude>
+    <ClInclude Include="HYAsset.h">
+      <Filter>06. Asset</Filter>
+    </ClInclude>
+    <ClInclude Include="HYMesh.h">
+      <Filter>06. Asset\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="HYShader.h">
+      <Filter>06. Asset\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="HYGraphicsShader.h">
+      <Filter>06. Asset\Shader\GraphicsShader</Filter>
+    </ClInclude>
+    <ClInclude Include="HYGameObject.h">
+      <Filter>07. GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="HYComponent.h">
+      <Filter>08. Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -114,6 +168,24 @@
     </ClCompile>
     <ClCompile Include="HYTimeMgr.cpp">
       <Filter>04. Manager\TimeMgr</Filter>
+    </ClCompile>
+    <ClCompile Include="HYAsset.cpp">
+      <Filter>06. Asset</Filter>
+    </ClCompile>
+    <ClCompile Include="HYMesh.cpp">
+      <Filter>06. Asset\Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="HYShader.cpp">
+      <Filter>06. Asset\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="HYGraphicsShader.cpp">
+      <Filter>06. Asset\Shader\GraphicsShader</Filter>
+    </ClCompile>
+    <ClCompile Include="HYGameObject.cpp">
+      <Filter>07. GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="HYComponent.cpp">
+      <Filter>08. Component</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
