--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -157,12 +157,18 @@ call EngineCopy.bat</Command>
     <ClInclude Include="define.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="global.h" />
+    <ClInclude Include="HYAsset.h" />
+    <ClInclude Include="HYComponent.h" />
     <ClInclude Include="HYDevice.h" />
     <ClInclude Include="HYEngine.h" />
     <ClInclude Include="HYEntity.h" />
+    <ClInclude Include="HYGameObject.h" />
+    <ClInclude Include="HYGraphicsShader.h" />
     <ClInclude Include="HYKeyMgr.h" />
     <ClInclude Include="HYLevel.h" />
+    <ClInclude Include="HYMesh.h" />
     <ClInclude Include="HYPathMgr.h" />
+    <ClInclude Include="HYShader.h" />
     <ClInclude Include="HYTimeMgr.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SimpleMath.h" />
@@ -172,12 +178,18 @@ call EngineCopy.bat</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="HYAsset.cpp" />
+    <ClCompile Include="HYComponent.cpp" />
     <ClCompile Include="HYDevice.cpp" />
     <ClCompile Include="HYEngine.cpp" />
     <ClCompile Include="HYEntity.cpp" />
+    <ClCompile Include="HYGameObject.cpp" />
+    <ClCompile Include="HYGraphicsShader.cpp" />
     <ClCompile Include="HYKeyMgr.cpp" />
     <ClCompile Include="HYLevel.cpp" />
+    <ClCompile Include="HYMesh.cpp" />
     <ClCompile Include="HYPathMgr.cpp" />
+    <ClCompile Include="HYShader.cpp" />
     <ClCompile Include="HYTimeMgr.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
