--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -162,6 +162,7 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYAsset.h" />
     <ClInclude Include="HYAssetMgr.h" />
     <ClInclude Include="HYCamera.h" />
+    <ClInclude Include="HYCameraMoveScript.h" />
     <ClInclude Include="HYComponent.h" />
     <ClInclude Include="HYConstBuffer.h" />
     <ClInclude Include="HYDevice.h" />
@@ -189,9 +190,14 @@ call EngineCopy.bat</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="extern.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="HYAsset.cpp" />
     <ClCompile Include="HYAssetMgr.cpp" />
     <ClCompile Include="HYCamera.cpp" />
+    <ClCompile Include="HYCameraMoveScript.cpp" />
     <ClCompile Include="HYComponent.cpp" />
     <ClCompile Include="HYConstBuffer.cpp" />
     <ClCompile Include="HYDevice.cpp" />
