--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -180,11 +180,13 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYLevelMgr.h" />
     <ClInclude Include="HYMesh.h" />
     <ClInclude Include="HYMeshRender.h" />
+    <ClInclude Include="HYMissileScript.h" />
     <ClInclude Include="HYPathMgr.h" />
     <ClInclude Include="HYPlayerScript.h" />
     <ClInclude Include="HYRenderComponent.h" />
     <ClInclude Include="HYScript.h" />
     <ClInclude Include="HYShader.h" />
+    <ClInclude Include="HYTaskMgr.h" />
     <ClInclude Include="HYTexture.h" />
     <ClInclude Include="HYTimeMgr.h" />
     <ClInclude Include="HYTransform.h" />
@@ -199,6 +201,7 @@ call EngineCopy.bat</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Use</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="func.cpp" />
     <ClCompile Include="HYAsset.cpp" />
     <ClCompile Include="HYAssetMgr.cpp" />
     <ClCompile Include="HYCamera.cpp" />
@@ -216,11 +219,13 @@ call EngineCopy.bat</Command>
     <ClCompile Include="HYLevelMgr.cpp" />
     <ClCompile Include="HYMesh.cpp" />
     <ClCompile Include="HYMeshRender.cpp" />
+    <ClCompile Include="HYMissileScript.cpp" />
     <ClCompile Include="HYPathMgr.cpp" />
     <ClCompile Include="HYPlayerScript.cpp" />
     <ClCompile Include="HYRenderComponent.cpp" />
     <ClCompile Include="HYScript.cpp" />
     <ClCompile Include="HYShader.cpp" />
+    <ClCompile Include="HYTaskMgr.cpp" />
     <ClCompile Include="HYTexture.cpp" />
     <ClCompile Include="HYTimeMgr.cpp" />
     <ClCompile Include="HYTransform.cpp" />
