Material Texture 전달, Asset 전용 스마트 포인터  설정

--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -235,6 +235,9 @@
     <ClInclude Include="HYMaterial.h">
       <Filter>06. Asset\Material</Filter>
     </ClInclude>
+    <ClInclude Include="Ptr.h">
+      <Filter>06. Asset</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
