--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -193,6 +193,7 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYTimeMgr.h" />
     <ClInclude Include="HYTransform.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Ptr.h" />
     <ClInclude Include="SimpleMath.h" />
     <ClInclude Include="singleton.h" />
     <ClInclude Include="struct.h" />
