Collision Mgr 추가, Rect 충돌 구현, Circle 충돌 구현 중

--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -168,6 +168,7 @@ call EngineCopy.bat</Command>
     <ClInclude Include="HYCamera.h" />
     <ClInclude Include="HYCameraMoveScript.h" />
     <ClInclude Include="HYCollider2D.h" />
+    <ClInclude Include="HYCollisionMgr.h" />
     <ClInclude Include="HYComponent.h" />
     <ClInclude Include="HYConstBuffer.h" />
     <ClInclude Include="HYDevice.h" />
@@ -212,6 +213,7 @@ call EngineCopy.bat</Command>
     <ClCompile Include="HYCamera.cpp" />
     <ClCompile Include="HYCameraMoveScript.cpp" />
     <ClCompile Include="HYCollider2D.cpp" />
+    <ClCompile Include="HYCollisionMgr.cpp" />
     <ClCompile Include="HYComponent.cpp" />
     <ClCompile Include="HYConstBuffer.cpp" />
     <ClCompile Include="HYDevice.cpp" />
