--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -122,6 +122,9 @@
     <Filter Include="04. Manager\RenderMgr">
       <UniqueIdentifier>{130ac1e2-d74a-4b77-bc54-dad467ebaf02}</UniqueIdentifier>
     </Filter>
+    <Filter Include="04. Manager\CollisionMgr">
+      <UniqueIdentifier>{c3ccad0a-5d39-449b-92b8-604c42488259}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -247,6 +250,9 @@
     <ClInclude Include="HYCollider2D.h">
       <Filter>08. Component\02. Collider2D</Filter>
     </ClInclude>
+    <ClInclude Include="HYCollisionMgr.h">
+      <Filter>04. Manager\CollisionMgr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -356,6 +362,9 @@
     </ClCompile>
     <ClCompile Include="HYCollider2D.cpp">
       <Filter>08. Component\02. Collider2D</Filter>
+    </ClCompile>
+    <ClCompile Include="HYCollisionMgr.cpp">
+      <Filter>04. Manager\CollisionMgr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
